# pastebin

./: .gitignore  API.md  Cargo.toml  Dockerfile  Dockerfile.armv7  Dockerfile.armv8  LICENSE  README.md  api.fbs  docker-compose.yml
.github/workflows/: docker-image-armv7.yml  docker-image-armv8.yml  rust.yml
src/: api_generated.rs  formatter.rs  lib.rs  main.rs  plugins.rs
src/plugins/: mermaid.rs  plugin.rs  prism.rs
static/: custom.css  custom.js  index.html  prism.css  prism.js
