[package]
name = "pastebin"
version = "0.1.3"
authors = ["Kaczanowski Mateusz <kaczanowski.mateusz@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["tls"] }
regex = "1"
humantime = "2.3.0"
rocksdb = "0.24.0"
nanoid = "0.4.0"
flatbuffers = "25.12.19"
structopt = "0.3.26"
structopt-derive = "0.4.18"
num_cpus = "1.17"
handlebars = "6.4.0"
tempfile = "3.27.0"
speculate = "0.1.2"
chrono = "0.4.44"
serde_json = "1.0.149"
