[package]
name = "pastebin"
version = "0.2.0"
authors = ["Kaczanowski Mateusz <kaczanowski.mateusz@gmail.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["tls"] }
regex = "1"
humantime = "2.3.0"
rocksdb = "0.24.0"
nanoid = "0.4.0"
flatbuffers = "25.12.19"
clap = { version = "4", features = ["derive"] }
handlebars = "6.4.0"
tempfile = "3.27.0"
chrono = "0.4.44"
serde_json = "1.0.149"
